Implementació aria en una nova pàgina de navegació

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/contact.css">
-    <title>About Us</title>
+    <title>Contact Us</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <header role="banner">
             <div class="navbar">
                 <nav aria-label="Main Navigation" role="navigation">
-                    <a href="accessible.html">Brand</a>
+                    <a href="accessible.html" aria-current="page">Brand</a>
                     <a href="#">Features</a>
                     <a href="#">Pricing</a>
                     <a href="#">About</a>
@@ -22,17 +22,15 @@
                 <form role="search" aria-label="Search Form">
                     <label for="search" class="visually-hidden">Search</label>
                     <input type="text" id="search" name="search" placeholder="Search">
-                    <button type="submit">Search</button>
+                    <button type="submit" style="color: black;" aria-label="Submit Search">Search</button>
                 </form>
             </div>
         </header>
-
         <main role="main">
-
-            <section class="contact" role="region">
+            <section class="contact" role="region" aria-labelledby="contact-title">
                 <div class="layout">
                     <div class="text-center">
-                        <h1 class="section-title">Contact Us Layout</h1>
+                        <h1 id="contact-title" class="section-title">Contact Us Layout</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan venenatis lectus sed
                             sollicitudin. Duis in odio ex. Sed elementum varius enim. In vel tincidunt lorem. Donec
                             gravida felis vitae ipsum pharetra maximus.</p>
@@ -40,57 +38,41 @@
                     <div class="grid-8 form">
                         <form action="php/email.php" method="post" id="contact_form" name="contactForm">
                             <div class="form-inline clearfix">
-                                <div class="form-group grid-6 ">
-                                    <input type="text" placeholder="name" id="exampleInputName" name="name"
+                                <div class="form-group grid-6">
+                                    <label for="exampleInputName" class="visually-hidden">Name</label>
+                                    <input type="text" placeholder="Name" id="exampleInputName" name="name"
                                         class="form-control">
                                 </div>
                                 <div class="form-group grid-6">
-                                    <input type="email" placeholder="email address" id="exampleInputEmail" name="email"
+                                    <label for="exampleInputEmail" class="visually-hidden">Email Address</label>
+                                    <input type="email" placeholder="Email Address" id="exampleInputEmail" name="email"
                                         class="form-control">
                                 </div>
                                 <div class="form-group grid-6">
-                                    <input type="text" placeholder="subject" id="exampleInputSubject" name="subject"
+                                    <label for="exampleInputSubject" class="visually-hidden">Subject</label>
+                                    <input type="text" placeholder="Subject" id="exampleInputSubject" name="subject"
                                         class="form-control">
                                 </div>
                                 <div class="form-group grid-6">
-                                    <input type="text" placeholder="company" id="exampleInputCompany" name="company"
+                                    <label for="exampleInputCompany" class="visually-hidden">Company</label>
+                                    <input type="text" placeholder="Company" id="exampleInputCompany" name="company"
                                         class="form-control">
                                 </div>
                                 <div class="form-group grid-12">
-                                    <textarea placeholder="message" id="exampleInputMessage" rows="3" name="message"
+                                    <label for="exampleInputMessage" class="visually-hidden">Message</label>
+                                    <textarea placeholder="Message" id="exampleInputMessage" rows="3" name="message"
                                         class="form-control"></textarea>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <div style="display:none;" class="success" id="mail_success">Your message has been sent
-                                    successfully.
-                                </div><!-- success message -->
-                                <div style="display:none;" class="error" id="mail_fail"> Sorry, error occured this time
-                                    sending your message.
-                                </div><!-- error message -->
-                            </div>
-                            <div id="submit" class="form-group grid-12">
-                                <input type="submit" value="send" class="btn  btn-lg costom-btn" id="send_message">
                             </div>
                         </form>
                     </div> <!-- /.col-xs-12 .col-sm-offset-2 .col-sm-8 -->
                     <div class="grid-12">
                         <div class="icon-text">
-                            <span>find us on</span>
+                            <span>Send</span>
                         </div><!-- /.icon-text -->
-                        <div class="icon-holder">
-                            <ul>
-                                <li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a target="_blank" href="#"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a target="_blank" href="#"><i class="fa fa-behance"></i></a></li>
-                                <li><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
-                            </ul>
-                        </div><!-- /.icon-holder -->
                     </div><!-- /.col-xs-12 -->
                 </div>
             </section>
-
         </main>
     </div>
 </body>
