--- a/accessible.html
+++ b/accessible.html
@@ -2,88 +2,88 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/accesible.css">
-	<title>Article title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/accesible.css">
+    <title>Article title</title>
 </head>
 
 <body>
-	<div class="container">
-		<header role="banner">
-			<div class="navbar">
-				<nav aria-label="Main Navigation" role="navigation">
-					<a href="accessible.html">Brand</a>
-					<a href="#">Features</a>
-					<a href="#">Pricing</a>
-					<a href="#">About</a>
-					<a href="contact.html">Contact us</a>
-				</nav>
-				<form role="search" aria-label="Search Form">
-					<label for="search" class="visually-hidden">Search</label>
-					<input type="text" id="search" name="search" placeholder="Search">
-					<button type="submit">Search</button>
-				</form>
-			</div>
-		</header>
+    <div class="container">
+        <header role="banner">
+            <div class="navbar">
+                <nav aria-label="Main Navigation" role="navigation">
+                    <a href="accessible.html" aria-current="page">Brand</a>
+                    <a href="#">Features</a>
+                    <a href="#">Pricing</a>
+                    <a href="#">About</a>
+                    <a href="contact.html">Contact us</a>
+                </nav>
+                <form role="search" aria-label="Search Form">
+                    <label for="search" class="visually-hidden">Search</label>
+                    <input type="text" id="search" name="search" placeholder="Search">
+                    <button type="submit">Search</button>
+                </form>
+            </div>
+        </header>
 
-		<main role="main">
-			<article>
-				<h1>Article title</h1>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-					aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-					culpa qui officia deserunt mollit anim id est laborum.
-				</p>
+        <main role="main">
+            <article>
+                <h1>Article title</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.
+                </p>
 
-				<div class="articulo">
-					<div>
-						<h2>Article subtitle #1</h2>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-							laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-							voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-							cupidatat
-							non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
-					</div>
-					<div>
-						<figure>
-							<img src="img/sunset-8569636_640.jpg" alt="Paisaje solejat">
-							<figcaption>Fuente:
-								[https://pixabay.com/es/photos/atardecer-mar-nubes-cielo-crucero-8569636/]</figcaption>
-						</figure>
-					</div>
-				</div>
+                <section class="articulo" aria-labelledby="subtitle1">
+                    <div>
+                        <h2 id="subtitle1">Article subtitle #1</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat
+                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                    <div>
+                        <figure>
+                            <img src="img/sunset-8569636_640.jpg" alt="Paisaje solejat">
+                            <figcaption>Fuente:
+                                [https://pixabay.com/es/photos/atardecer-mar-nubes-cielo-crucero-8569636/]</figcaption>
+                        </figure>
+                    </div>
+                </section>
 
-				<div class="articulo">
-					<div>
-						<figure>
-							<img src="img/volcano-8488486_640.jpg" alt="Volcà">
-							<figcaption>Fuente:
-								[https://pixabay.com/es/photos/volc%C3%A1n-monta%C3%B1a-amanecer-naturaleza-8488486/]
-							</figcaption>
-						</figure>
-					</div>
-					<div>
-						<h2>Article subtitle #2</h2>
+                <section class="articulo" aria-labelledby="subtitle2">
+                    <div>
+                        <figure>
+                            <img src="img/volcano-8488486_640.jpg" alt="Volcà">
+                            <figcaption>Fuente:
+                                [https://pixabay.com/es/photos/volc%C3%A1n-monta%C3%B1a-amanecer-naturaleza-8488486/]
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div>
+                        <h2 id="subtitle2">Article subtitle #2</h2>
 
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-							laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-							voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-							cupidatat
-							non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
-					</div>
-				</div>
-			</article>
-		</main>
-	</div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat
+                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                </section>
+            </article>
+        </main>
+    </div>
 </body>
 
 </html>
