Activitat de colors amb una nova secció al navbar

--- a/accessible.html
+++ b/accessible.html
@@ -16,7 +16,7 @@
                     <a href="accessible.html" aria-current="page">Brand</a>
                     <a href="#">Features</a>
                     <a href="#">Pricing</a>
-                    <a href="#">About</a>
+                    <a href="scores.html">Scores</a>
                     <a href="contact.html">Contact us</a>
                 </nav>
                 <form role="search" aria-label="Search Form">
