--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,11 @@
         <header role="banner">
             <div class="navbar">
                 <nav aria-label="Main Navigation" role="navigation">
-                    <a href="accessible.html" aria-current="page">Brand</a>
+                    <a href="accessible.html">Brand</a>
                     <a href="#">Features</a>
                     <a href="#">Pricing</a>
-                    <a href="#">About</a>
-                    <a href="contact.html">Contact us</a>
+                    <a href="scores.html">Scores</a>
+                    <a href="contact.html" aria-current="page">Contact us</a>
                 </nav>
                 <form role="search" aria-label="Search Form">
                     <label for="search" class="visually-hidden">Search</label>
