--- a/accessible.html
+++ b/accessible.html
@@ -52,9 +52,8 @@
                     </div>
                     <div>
                         <figure>
-                            <img src="img/sunset-8569636_640.jpg" alt="Paisaje solejat">
-                            <figcaption>Fuente:
-                                [https://pixabay.com/es/photos/atardecer-mar-nubes-cielo-crucero-8569636/]</figcaption>
+                            <img src="img/sunset-8569636_640.png" alt="Paisaje solejat">
+                            <a id="links" href="https://pixabay.com/es/photos/atardecer-mar-nubes-cielo-crucero-8569636">Enllaç a l'imatge</a>
                         </figure>
                     </div>
                 </section>
@@ -62,10 +61,8 @@
                 <section class="articulo" aria-labelledby="subtitle2">
                     <div>
                         <figure>
-                            <img src="img/volcano-8488486_640.jpg" alt="Volcà">
-                            <figcaption>Fuente:
-                                [https://pixabay.com/es/photos/volc%C3%A1n-monta%C3%B1a-amanecer-naturaleza-8488486/]
-                            </figcaption>
+                            <img src="img/volcano-8488486_640.png" alt="Volcà">
+                            <a id="links" href="https://pixabay.com/es/photos/volc%C3%A1n-monta%C3%B1a-amanecer-naturaleza-8488486">Enllaç a l'imatge</a>
                         </figure>
                     </div>
                     <div>
