Reajust fitxer scores

--- a/scores.html
+++ b/scores.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scores</title>
-    <link rel="stylesheet" href="./css/scores.css">
+    <link rel="stylesheet" href="css/scores.css">
 </head>
 
 <body>
@@ -30,11 +30,11 @@
         <main role="main">
             <div>
                 <h3>Valoració de color de la main page</h3>
-                <img src="./img/score1.png" alt="Score de validació de colors">
+                <img src="img/score1.png" alt="Score de validació de colors">
             </div>
             <div>
                 <h3>Valoració de color de la pàgina de contact us</h3>
-                <img src="./img/score2.png" alt="Score de validació de colors">
+                <img src="img/score2.png" alt="Score de validació de colors">
             </div>
         </main>
     </div>
